--- a/GoogleMap/package.json
+++ b/GoogleMap/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^4.7.4"
+    "@types/faker": "^4.1.5",
+    "@types/googlemaps": "^3.43.3",
+    "typescript": "^4.7.4",
+    "faker": "^4.1.0"
   }
 }
