--- a/TsPlay/tsconfig.json
+++ b/TsPlay/tsconfig.json
@@ -99,7 +99,7 @@
 
     // "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
     // "noUncheckedIndexedAccess": true,                 /* Add 'undefined' to a type when accessed using an index. */
-    // "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
+    "noImplicitOverride": true /* 子类方法重写父类方法必须加override */,
     // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
     // "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
     "allowUnreachableCode": false /* 是否允许存在无法执行到的code */,
