--- a/TsPlay/tsconfig.json
+++ b/TsPlay/tsconfig.json
@@ -77,7 +77,7 @@
 
     /* Type Checking */
     "strict": true /* Enable all strict type-checking options. */,
-    // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+    "noImplicitAny": false /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
     "strictNullChecks": false /* 是否允许传递 'null' and 'undefined' 给参数 */,
     // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
     // "strictBindCallApply": true,                      /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
